--- a/assets/stylesheets/swag.css
+++ b/assets/stylesheets/swag.css
@@ -1,14 +1,1 @@
-.thang {
-    color: rgb(4, 164, 227);
-}
-.title {
-     color: rgb(46, 49, 54);
-     text-shadow: 0px 3px 0px #b2a98f, 0px 14px 10px rgba(0,0,0,0.15), 0px 24px 2px rgba(0,0,0,0.1), 0px 34px 30px rgba(46, 49, 54,0.1);
-}
-.desc {
-    font-size: 20px;
-    text-align: center;
-    margin: 280px auto;
-    padding: 20px;
-    color: rgb(46, 49, 54);
-}
+.thang{color:#04a4e3}.desc,.title{color:#2e3136}.title{text-shadow:0 3px 0 #b2a98f,0 14px 10px rgba(0,0,0,.15),0 24px 2px rgba(0,0,0,.1),0 34px 30px rgba(46,49,54,.1)}.desc{font-size:20px;text-align:center;margin:280px auto;padding:20px}
